# Clipgenius

./: LICENSE  PACKAGING_SUMMARY.md  PUBLISHING.md  QUICKSTART.md  README.md  pyproject.toml  setup.py
clipgenius/: __init__.py
