[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clipgenius"
version = "1.0.0"
description = "AI-powered command-line tool for downloading videos from YouTube and other platforms"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ClipGenius Team", email = "team@clipgenius.com"}
]
keywords = ["video", "downloader", "youtube", "ai", "cli", "yt-dlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "yt-dlp>=2023.10.13",
    "openai>=1.0.0",
    "click>=8.0.0",
    "colorama>=0.4.6",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.urls]
Homepage = "https://github.com/alexusa404-creator/Clipgenius"
Repository = "https://github.com/alexusa404-creator/Clipgenius"
Issues = "https://github.com/alexusa404-creator/Clipgenius/issues"

[project.scripts]
clipgenius = "clipgenius.cli:main"
